welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbPas=0
^Poucet:19: error: illegal start of simple expression
	}
        ^Poucet:20: error: 'while' expected but '}' found.
}
^